# CodewarsToDoctestBridge

./: .gitignore  CMakeLists.txt  README.md
cmake/: ParseVersion.cmake
include/: cw2dt.hpp
